# skill-hash

./: Dockerfile  README.md  deployment.yaml  pyproject.toml
src/skill_hash/: cli.py
